# fruit-box-env

./: .gitignore  README.md  compare_policies.py  generate_dataset.py  main.py  merge_to_hf.py  policy_analysis.py  pyproject.toml
out_data/greedy_1k/: trajectories.parquet
out_data/greedy_area_1k/: episodes.jsonl  trajectories.parquet
out_data/hf_dataset/: episodes.jsonl
out_data/hf_dataset/train/: train.parquet
out_data/high_pairs_1k/: episodes.jsonl
out_data/look_ahead_100/: episodes.jsonl  trajectories.parquet
out_data/look_ahead_1k_2_70_0.95/: episodes.jsonl  trajectories.parquet
out_data/minimal_area_1k/: episodes.jsonl  trajectories.parquet
out_data/random_1k/: trajectories.parquet
out_data/random_legal_1k/: episodes.jsonl  trajectories.parquet
