[project]
name = "fruit-box-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dataclasses>=0.8",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "verifiers>=0.1.5.post0",
]
